--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -205,12 +205,19 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "### Settings"
+      ],
+      "metadata": {
+        "id": "7xEoTPlyk1SD"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "f3Sj0fxmtw6K"
       },
       "source": [
-        "### Settings\n",
-        "\n",
         "Select visual `model` (results do vary!). I prefer ViT for consistency (and it's the only native multi-language option).  \n",
         "`align` option is about composition. `uniform` looks most adequate, `overscan` can make semi-seamless tileable texture.  \n",
         "`use_wavelets` for DWT encoding instead of FFT. Select `wave` method if needed.  \n",
@@ -234,11 +241,6 @@
         "cellView": "form"
       },
       "source": [
-        "#@title Generate\n",
-        "\n",
-        "!rm -rf $tempdir\n",
-        "os.makedirs(tempdir, exist_ok=True)\n",
-        "\n",
         "sideX = 1280 #@param {type:\"integer\"}\n",
         "sideY = 720 #@param {type:\"integer\"}\n",
         "#@markdown > Config\n",
@@ -250,23 +252,44 @@
         "sync =  0.4 #@param {type:\"number\"}\n",
         "#@markdown > Look\n",
         "decay = 1.5 #@param {type:\"number\"}\n",
-        "colors = 1.5 #@param {type:\"number\"}\n",
-        "contrast = 0.9 #@param {type:\"number\"}\n",
-        "sharpness = 0.3 #@param {type:\"number\"}\n",
+        "colors = 1.8 #@param {type:\"number\"}\n",
+        "contrast = 1.1 #@param {type:\"number\"}\n",
+        "sharpness = 0 #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
-        "steps = 300 #@param {type:\"integer\"}\n",
+        "steps = 150 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
         "learning_rate = .05 #@param {type:\"number\"}\n",
+        "optimizer = 'adam' #@param ['adam', 'adamw']\n",
         "save_freq = 1 #@param {type:\"integer\"}\n",
         "#@markdown > Tricks\n",
-        "aug_noise = 0.2 #@param {type:\"number\"}\n",
+        "aug_noise = 0. #@param {type:\"number\"}\n",
         "no_text = 0.07 #@param {type:\"number\"}\n",
         "enhance = 0. #@param {type:\"number\"}\n",
         "macro = 0.4 #@param {type:\"number\"}\n",
         "progressive_grow = False #@param {type:\"boolean\"}\n",
         "if multilang: model = 'ViT-B/32' # sbert model is trained with ViT\n",
         "diverse = -enhance\n",
-        "expand = abs(enhance)\n",
+        "expand = abs(enhance)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Generate"
+      ],
+      "metadata": {
+        "id": "GP8RWuMFj8LO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title run\n",
+        "\n",
+        "!rm -rf $tempdir\n",
+        "os.makedirs(tempdir, exist_ok=True)\n",
         "\n",
         "shape = [1, 3, sideY, sideX]\n",
         "\n",
@@ -312,7 +335,10 @@
         "  lr0 = lr1 * 0.01\n",
         "else:\n",
         "  lr0 = learning_rate\n",
-        "optimizer = torch.optim.AdamW(params, lr0, weight_decay=0.01, amsgrad=True)\n",
+        "if optimizer.lower() == 'adamw':\n",
+        "  optimr = torch.optim.AdamW(params, lr0, weight_decay=0.01, betas=(.0, .999), amsgrad=True)\n",
+        "else:\n",
+        "  optimr = torch.optim.Adam(params, lr0, betas=(.0, .999))\n",
         "\n",
         "if len(subtract) > 0:\n",
         "  samples = int(samples * 0.75)\n",
@@ -402,8 +428,8 @@
         "    # empirical tone mapping\n",
         "    if sync > 0 and upload_image:\n",
         "      img = img **1.3 \n",
-        "    if sharpness != 0:\n",
-        "      img = img ** (1 + sharpness/2.)\n",
+        "    # if sharpness != 0:\n",
+        "      # img = img ** (1 + sharpness/2.)\n",
         "  save_img(img, os.path.join(tempdir, '%04d.jpg' % num))\n",
         "  outpic.clear_output()\n",
         "  with outpic:\n",
@@ -447,12 +473,12 @@
         "\n",
         "  if progressive_grow is True:\n",
         "    lr_cur = lr0 + (i / steps) * (lr1 - lr0)\n",
-        "    for g in optimizer.param_groups: \n",
+        "    for g in optimr.param_groups: \n",
         "      g['lr'] = lr_cur\n",
         "\n",
-        "  optimizer.zero_grad()\n",
+        "  optimr.zero_grad()\n",
         "  loss.backward()\n",
-        "  optimizer.step()\n",
+        "  optimr.step()\n",
         "  \n",
         "  if i % save_freq == 0:\n",
         "    checkout(i // save_freq)\n",
@@ -470,6 +496,10 @@
         "files.download(tempdir + '.pt')\n",
         "files.download(tempdir + '.mp4')\n"
       ],
+      "metadata": {
+        "cellView": "form",
+        "id": "81P3Vl6ijnQJ"
+      },
       "execution_count": null,
       "outputs": []
     }
