--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -278,7 +278,7 @@
         "# Default settings\n",
         "if method == 'RGB':\n",
         "  align = 'overscan'\n",
-        "  colors = 2\n",
+        "  colors = 2.3\n",
         "  contrast = 1.2\n",
         "  sharpness = -1.\n",
         "  aug_noise = 0.\n",
@@ -288,13 +288,14 @@
         "  colors = 1.8\n",
         "  contrast = 1.1\n",
         "  sharpness = 1.\n",
-        "  aug_noise = 2.\n",
+        "  aug_noise = 2. # only for FFT\n",
         "  smooth = True\n",
         "interpolate_topics = True\n",
         "style_power = 1.\n",
         "samples = 200\n",
         "save_step = 1\n",
         "learning_rate = 1.\n",
+        "optimizer = 'adam'\n",
         "aug_transform = 'custom'\n",
         "similarity_function = 'cossim'\n",
         "macro = 0.4\n",
@@ -362,7 +363,7 @@
         "interpolate_topics = True #@param {type:\"boolean\"}\n",
         "\n",
         "#@markdown > Look\n",
-        "colors = 2 #@param {type:\"number\"}\n",
+        "colors = 2.3 #@param {type:\"number\"}\n",
         "contrast = 1.2 #@param {type:\"number\"}\n",
         "sharpness = 0. #@param {type:\"number\"}\n",
         "\n",
@@ -370,6 +371,7 @@
         "samples = 200 #@param {type:\"integer\"}\n",
         "save_step = 1 #@param {type:\"integer\"}\n",
         "learning_rate = 1. #@param {type:\"number\"}\n",
+        "optimizer = 'adam' #@param ['adam', 'adamw']\n",
         "\n",
         "#@markdown > Tricks\n",
         "aug_transform = 'fast' #@param ['fast', 'custom', 'elastic', 'none']\n",
@@ -403,6 +405,7 @@
         "\n",
         "Decrease **`samples`** if you face OOM (it's the main RAM eater), or just to speed up the process (with the cost of quality).  \n",
         "`save_step` defines, how many optimization steps are taken between saved frames. Set it >1 for stronger image processing.   \n",
+        "Select optimizer: `adamw` is stable but noisy; `adam` is softer, but may spill some colored blur on longer videos. \n",
         "\n",
         "Experimental tricks:  \n",
         "`aug_transform` applies some augmentations, which quite radically change the output of this method (and slow down the process). Try yourself to see which is good for your case. `aug_noise` augmentation [FFT only!] seems to enhance optimization with transforms.  \n",
@@ -678,10 +681,12 @@
         "\n",
         "    image_f = to_valid_rgb(image_f, colors=colors)\n",
         "    del img_tmp\n",
-        "    optimizer = torch.optim.Adam(params, learning_rate)\n",
-        "    # optimizer = torch.optim.AdamW(params, learning_rate, weight_decay=0.01, amsgrad=True)\n",
+        "    if optimizer.lower() == 'adamw':\n",
+        "      optimr = torch.optim.AdamW(params, learning_rate, weight_decay=0.01, betas=(.0, .999), amsgrad=True)\n",
+        "    else:\n",
+        "      optimr = torch.optim.Adam(params, learning_rate, betas=(.0, .999))\n",
         "    if smooth is True and num + ii > 0:\n",
-        "      optimizer.load_state_dict(opt_state)\n",
+        "      optimr.load_state_dict(opt_state)\n",
         "\n",
         "    # get encoded inputs\n",
         "    txt_enc  = txt_encs[ii % len(txt_encs)].unsqueeze(0)   if len(txt_encs)  > 0 else None\n",
@@ -720,15 +725,15 @@
         "        prev_enc = out_enc.detach().clone()\n",
         "      del img_out, img_sliced, out_enc; torch.cuda.empty_cache()\n",
         "\n",
-        "      optimizer.zero_grad()\n",
+        "      optimr.zero_grad()\n",
         "      loss.backward()\n",
-        "      optimizer.step()\n",
+        "      optimr.step()\n",
         "    \n",
         "    ### save params & frame\n",
         "\n",
         "    params_tmp = params[0].detach().clone()\n",
         "    if smooth is True:\n",
-        "      opt_state = optimizer.state_dict()\n",
+        "      opt_state = optimr.state_dict()\n",
         "\n",
         "    with torch.no_grad():\n",
         "      img_t = image_f(contrast=contrast)[0].permute(1,2,0)\n",
