--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -435,15 +435,6 @@
         "cellView": "form"
       },
       "source": [
-        "### deKxi:: This whole cell contains most of whats needed, \n",
-        "# with just a few changes to hook it up via frame_transform \n",
-        "# (also glob_step now as global var)\n",
-        "\n",
-        "# I highly recommend performing the frame transformations and depth *after* saving,\n",
-        "# (or just the depth warp if you prefer to keep the other affines as they are)\n",
-        "# from my testing it reduces any noticeable stretching and allows the new areas\n",
-        "# revealed from the changed perspective to be filled/detailed \n",
-        "\n",
         "# pretrained models: Nyu is much better but Kitti is an option too\n",
         "depth_model = 'nyu' # @ param [\"nyu\",\"kitti\"]\n",
         "DepthStrength = 0.01 #@param{type:\"number\"}\n",
@@ -451,13 +442,13 @@
         "save_depth = False #@param{type:\"boolean\"}\n",
         "size = (sideY,sideX)\n",
         "\n",
-        "#@markdown NB: depth computing may take up to ~3x more time. Read the comments inside for more info. \n",
+        "#@markdown NB: depth computing may double rendering time. \n",
         "\n",
-        "#@markdown Courtesy of [deKxi](https://twitter.com/deKxi)\n",
+        "#@markdown Originally by [deKxi](https://twitter.com/deKxi)\n",
         "\n",
         "%cd $work_dir\n",
         "\n",
-        "if DepthStrength > 0:\n",
+        "if DepthStrength != 0:\n",
         "\n",
         "  if not os.path.exists(\"AdaBins_nyu.pt\"):\n",
         "    !gdown https://drive.google.com/uc?id=1lvyZZbC9NLcS8a__YPcUP7rDiIpbRpoF\n",
@@ -475,31 +466,16 @@
         "\n",
         "  depth_infer, depth_mask = depth.init_adabins(size=size, model_path='AdaBins_nyu.pt', mask_path=depth_mask_file)\n",
         "\n",
-        "  def depth_transform(img_t, img_np, depth_infer, depth_mask, size, depthX=0, scale=1., shift=[0,0], colors=1, depth_dir=None, save_num=0):\n",
+        "  def depth_transform(img_t, depth_infer, depth_mask, size, depthX=0, scale=1., shift=[0,0], colors=1, depth_dir=None, save_num=0):\n",
+        "    size2 = [s//2 for s in size]\n",
         "    if not isinstance(scale, float): scale = float(scale[0])\n",
         "    # d X/Y define the origin point of the depth warp, effectively a \"3D pan zoom\", [-1..1]\n",
         "    # plus = look ahead, minus = look aside\n",
         "    dX = 100. * shift[0] / size[1]\n",
         "    dY = 100. * shift[1] / size[0]\n",
         "    # dZ = movement direction: 1 away (zoom out), 0 towards (zoom in), 0.5 stay\n",
-        "    dZ = 0.5 + 23. * (scale-1) \n",
-        "    # dZ += 0.5 * float(math.sin(((save_num % 70)/70) * math.pi * 2))\n",
-        "    \n",
-        "    if img_np is None:\n",
-        "      img2 = img_t.clone().detach()\n",
-        "      par, imag, _ = pixel_image(img2.shape, resume=img2)\n",
-        "      img2 = to_valid_rgb(imag, colors=colors)()\n",
-        "      img2 = img2.detach().cpu().numpy()[0]\n",
-        "      img2 = (np.transpose(img2, (1,2,0))) # [h,w,c]\n",
-        "      img2 = np.clip(img2*255, 0, 255).astype(np.uint8)\n",
-        "      image_pil = T.ToPILImage()(img2)\n",
-        "      del img2\n",
-        "    else:\n",
-        "      image_pil = T.ToPILImage()(img_np)\n",
-        "\n",
-        "    size2 = [s//2 for s in size]\n",
-        "\n",
-        "    img = depth.depthwarp(img_t, image_pil, depth_infer, depth_mask, size2, depthX, [dX,dY], dZ, rescale=0.5, clip_range=2, save_path=depth_dir, save_num=save_num)\n",
+        "    dZ = 0.5 + 32. * (scale-1) \n",
+        "    img = depth.depthwarp(img_t, depth_infer, depth_mask, size2, depthX, [dX,dY], dZ, save_path=depth_dir, save_num=save_num)\n",
         "    return img\n"
       ],
       "execution_count": null,
@@ -624,11 +600,9 @@
         "    img = T.functional.center_crop(img, size) # on 1.8+ also pads\n",
         "  return img\n",
         "\n",
-        "global img_np\n",
-        "img_np = None\n",
         "prev_enc = 0\n",
         "def process(num):\n",
-        "  global params_tmp, img_np, opt_state, params, image_f, optimizer, pbar\n",
+        "  global params_tmp, opt_state, params, image_f, optimizer, pbar\n",
         "\n",
         "  if interpolate_topics:\n",
         "    txt_encs  = get_encs(key_txt_encs,  num)\n",
@@ -643,6 +617,10 @@
         "  for ii in range(steps):\n",
         "    glob_step = num * steps + ii # saving/transforming\n",
         "\n",
+        "    # get encoded inputs\n",
+        "    txt_enc  = txt_encs[ii % len(txt_encs)].unsqueeze(0)   if len(txt_encs)  > 0 else None\n",
+        "    styl_enc = styl_encs[ii % len(styl_encs)].unsqueeze(0) if len(styl_encs) > 0 else None\n",
+        "    \n",
         "    ### animation: transform frame, reload params\n",
         "\n",
         "    h, w = sideY, sideX\n",
@@ -654,8 +632,8 @@
         "    shear =       m_shear[glob_step][0] if animate_them else distort\n",
         "\n",
         "    if method == 'RGB':\n",
-        "      if DepthStrength > 0:\n",
-        "        params_tmp = depth_transform(params_tmp, img_np, depth_infer, depth_mask, size, DepthStrength, scale, trans, colors, depthdir, glob_step)\n",
+        "      if DepthStrength != 0:\n",
+        "        params_tmp = depth_transform(params_tmp, depth_infer, depth_mask, size, DepthStrength, scale, trans, colors, depthdir, glob_step)\n",
         "      params_tmp = frame_transform(params_tmp, (h,w), angle, trans, scale, shear)\n",
         "      params, image_f, _ = pixel_image([1,3,h,w], resume=params_tmp)\n",
         "      img_tmp = None\n",
@@ -663,16 +641,16 @@
         "    else: # FFT\n",
         "      if old_torch(): # 1.7.1\n",
         "        img_tmp = torch.irfft(params_tmp, 2, normalized=True, signal_sizes=(h,w))\n",
-        "        if DepthStrength > 0:\n",
-        "          img_tmp = depth_transform(img_tmp, img_np, depth_infer, depth_mask, size, DepthStrength, scale, trans, colors, depthdir, glob_step)\n",
+        "        if DepthStrength != 0:\n",
+        "          img_tmp = depth_transform(img_tmp, depth_infer, depth_mask, size, DepthStrength, scale, trans, colors, depthdir, glob_step)\n",
         "        img_tmp = frame_transform(img_tmp, (h,w), angle, trans, scale, shear)\n",
         "        params_tmp = torch.rfft(img_tmp, 2, normalized=True)\n",
         "      else: # 1.8+\n",
         "        if type(params_tmp) is not torch.complex64:\n",
         "          params_tmp = torch.view_as_complex(params_tmp)\n",
         "        img_tmp = torch.fft.irfftn(params_tmp, s=(h,w), norm='ortho')\n",
-        "        if DepthStrength > 0:\n",
-        "          img_tmp = depth_transform(img_tmp, img_np, depth_infer, depth_mask, size, DepthStrength, scale, trans, colors, depthdir, glob_step)\n",
+        "        if DepthStrength != 0:\n",
+        "          img_tmp = depth_transform(img_tmp, depth_infer, depth_mask, size, DepthStrength, scale, trans, colors, depthdir, glob_step)\n",
         "        img_tmp = frame_transform(img_tmp, (h,w), angle, trans, scale, shear)\n",
         "        params_tmp = torch.fft.rfftn(img_tmp, s=[h,w], dim=[2,3], norm='ortho')\n",
         "        params_tmp = torch.view_as_real(params_tmp)\n",
@@ -688,10 +666,6 @@
         "    if smooth is True and num + ii > 0:\n",
         "      optimr.load_state_dict(opt_state)\n",
         "\n",
-        "    # get encoded inputs\n",
-        "    txt_enc  = txt_encs[ii % len(txt_encs)].unsqueeze(0)   if len(txt_encs)  > 0 else None\n",
-        "    styl_enc = styl_encs[ii % len(styl_encs)].unsqueeze(0) if len(styl_encs) > 0 else None\n",
-        "          \n",
         "    ### optimization\n",
         "\n",
         "    for ss in range(save_step):\n",
