--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -225,6 +225,7 @@
         "`sync` value adds LPIPS loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity.  \n",
         "Decrease `samples` if you face OOM (it's the main RAM eater).  \n",
         "\n",
+        "Select optimizer: `_custom` options are more stable but noisy; pure `adam` is softer, but may spill some colored blur on longer runs.  \n",
         "Setting `steps` much higher (1000-..) will elaborate details and make tones smoother, but may start throwing texts like graffiti.  \n",
         "Tune `decay` (compositional softness) and `sharpness`, `colors` (saturation) and `contrast` as needed.  \n",
         "\n",
@@ -259,7 +260,7 @@
         "steps = 150 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
         "learning_rate = .05 #@param {type:\"number\"}\n",
-        "optimizer = 'adam' #@param ['adam', 'adamw']\n",
+        "optimizer = 'adam_custom' #@param ['adam', 'adam_custom', 'adamw', 'adamw_custom']\n",
         "save_freq = 1 #@param {type:\"integer\"}\n",
         "#@markdown > Tricks\n",
         "aug_noise = 0. #@param {type:\"number\"}\n",
@@ -335,14 +336,19 @@
         "  lr0 = lr1 * 0.01\n",
         "else:\n",
         "  lr0 = learning_rate\n",
+        "\n",
         "if optimizer.lower() == 'adamw':\n",
-        "  optimr = torch.optim.AdamW(params, lr0, weight_decay=0.01, betas=(.0, .999), amsgrad=True)\n",
-        "else:\n",
-        "  optimr = torch.optim.Adam(params, lr0, betas=(.0, .999))\n",
+        "  optimr = torch.optim.AdamW(params, lr0, weight_decay=0.01, amsgrad=True)\n",
+        "elif optimizer.lower() == 'adamw_custom':\n",
+        "  optimr = torch.optim.AdamW(params, lr0, weight_decay=0.01, amsgrad=True, betas=(.0,.999))\n",
+        "elif optimizer.lower() == 'adam':\n",
+        "  optimr = torch.optim.Adam(params, lr0)\n",
+        "else: # adam_custom\n",
+        "  optimr = torch.optim.Adam(params, lr0, betas=(.0,.999))\n",
         "\n",
         "if len(subtract) > 0:\n",
         "  samples = int(samples * 0.75)\n",
-        "print(' using %d samples' % samples)\n",
+        "print(' using %d samples,' % samples, optimizer, 'optimizer')\n",
         "\n",
         "model_clip, _ = clip.load(model, jit=old_torch())\n",
         "modsize = model_clip.visual.input_resolution\n",
