--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -371,12 +371,12 @@
         "samples = 200 #@param {type:\"integer\"}\n",
         "save_step = 1 #@param {type:\"integer\"}\n",
         "learning_rate = 1. #@param {type:\"number\"}\n",
-        "optimizer = 'adam' #@param ['adam', 'adamw']\n",
+        "optimizer = 'adam' #@param ['adam', 'adam_custom', 'adamw', 'adamw_custom']\n",
         "\n",
         "#@markdown > Tricks\n",
         "aug_transform = 'fast' #@param ['fast', 'custom', 'elastic', 'none']\n",
         "aug_noise = 0. #@param {type:\"number\"}\n",
-        "macro = 0.4 #@param {type:\"number\"}\n",
+        "macro = 0.3 #@param {type:\"number\"}\n",
         "enforce = 0. #@param {type:\"number\"}\n",
         "expand = 0. #@param {type:\"number\"}\n",
         "similarity_function = 'cossim' #@param ['cossim', 'spherical', 'mixed', 'angular', 'dot']\n",
@@ -405,7 +405,7 @@
         "\n",
         "Decrease **`samples`** if you face OOM (it's the main RAM eater), or just to speed up the process (with the cost of quality).  \n",
         "`save_step` defines, how many optimization steps are taken between saved frames. Set it >1 for stronger image processing.   \n",
-        "Select optimizer: `adamw` is stable but noisy; `adam` is softer, but may spill some colored blur on longer videos. \n",
+        "Select optimizer: `_custom` options are more stable but noisy; pure `adam` is softer, but may spill some colored blur on longer videos. \n",
         "\n",
         "Experimental tricks:  \n",
         "`aug_transform` applies some augmentations, which quite radically change the output of this method (and slow down the process). Try yourself to see which is good for your case. `aug_noise` augmentation [FFT only!] seems to enhance optimization with transforms.  \n",
@@ -516,7 +516,7 @@
         "  sample_decrease *= 0.5\n",
         "\n",
         "samples = int(samples * sample_decrease)\n",
-        "print(' using %s method, %d samples' % (method, samples))\n",
+        "print(' using %s method, %d samples, %s optimizer' % (method, samples, optimizer))\n",
         "\n",
         "def enc_text(txt):\n",
         "  if translate:\n",
@@ -659,10 +659,16 @@
         "\n",
         "    image_f = to_valid_rgb(image_f, colors=colors)\n",
         "    del img_tmp\n",
+        "\n",
         "    if optimizer.lower() == 'adamw':\n",
-        "      optimr = torch.optim.AdamW(params, learning_rate, weight_decay=0.01, betas=(.0, .999), amsgrad=True)\n",
-        "    else:\n",
-        "      optimr = torch.optim.Adam(params, learning_rate, betas=(.0, .999))\n",
+        "      optimr = torch.optim.AdamW(params, learning_rate, weight_decay=0.01, amsgrad=True)\n",
+        "    elif optimizer.lower() == 'adamw_custom':\n",
+        "      optimr = torch.optim.AdamW(params, learning_rate, weight_decay=0.01, amsgrad=True, betas=(.0,.999))\n",
+        "    elif optimizer.lower() == 'adam':\n",
+        "      optimr = torch.optim.Adam(params, learning_rate)\n",
+        "    else: # adam_custom\n",
+        "      optimr = torch.optim.Adam(params, learning_rate, betas=(.0,.999))\n",
+        "\n",
         "    if smooth is True and num + ii > 0:\n",
         "      optimr.load_state_dict(opt_state)\n",
         "\n",
