--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -308,6 +308,7 @@
         "animate_them = True\n",
         "sample_decrease = 1.\n",
         "DepthStrength = 0.\n",
+        "save_depth = False\n",
         "\n",
         "print(' loading CLIP model..')\n",
         "model_clip, _ = clip.load(model, jit=old_torch())\n",
@@ -365,7 +366,7 @@
         "#@markdown > Look\n",
         "colors = 2.3 #@param {type:\"number\"}\n",
         "contrast = 1.2 #@param {type:\"number\"}\n",
-        "sharpness = 0. #@param {type:\"number\"}\n",
+        "sharpness =  0#@param {type:\"number\"}\n",
         "\n",
         "#@markdown > Training\n",
         "samples = 200 #@param {type:\"integer\"}\n",
@@ -379,7 +380,7 @@
         "macro = 0.3 #@param {type:\"number\"}\n",
         "enforce = 0. #@param {type:\"number\"}\n",
         "expand = 0. #@param {type:\"number\"}\n",
-        "similarity_function = 'cossim' #@param ['cossim', 'spherical', 'mixed', 'angular', 'dot']\n",
+        "similarity_function = 'mixed' #@param ['cossim', 'spherical', 'mixed', 'angular', 'dot']\n",
         "\n",
         "#@markdown > Motion\n",
         "zoom = 0.012 #@param {type:\"number\"}\n",
@@ -405,7 +406,8 @@
         "\n",
         "Decrease **`samples`** if you face OOM (it's the main RAM eater), or just to speed up the process (with the cost of quality).  \n",
         "`save_step` defines, how many optimization steps are taken between saved frames. Set it >1 for stronger image processing.   \n",
-        "Select optimizer: `_custom` options are more stable but noisy; pure `adam` is softer, but may spill some colored blur on longer videos. \n",
+        "Select optimizer: `_custom` options are more stable but noisy; pure `adam` is softer, but may spill some colored blur on longer videos.  \n",
+        "Negative `sharpness` may also reduce noisiness.  \n",
         "\n",
         "Experimental tricks:  \n",
         "`aug_transform` applies some augmentations, which quite radically change the output of this method (and slow down the process). Try yourself to see which is good for your case. `aug_noise` augmentation [FFT only!] seems to enhance optimization with transforms.  \n",
@@ -738,8 +740,7 @@
         "HTML(makevid(tempdir))\n",
         "files.download(tempdir + '.mp4')\n",
         "\n",
-        "## deKxi: downloading depth video\n",
-        "if save_depth and DepthStrength > 0:\n",
+        "if save_depth and DepthStrength != 0:\n",
         "  HTML(makevid(depthdir))\n",
         "  files.download(depthdir + '.mp4')"
       ],
@@ -762,7 +763,7 @@
       },
       "source": [
         "files.download(tempdir + '.mp4')\n",
-        "if save_depth and DepthStrength > 0:\n",
+        "if save_depth and DepthStrength != 0:\n",
         "  files.download(depthdir + '.mp4')"
       ],
       "execution_count": null,
