--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -297,7 +297,7 @@
         "learning_rate = 1.\n",
         "optimizer = 'adam'\n",
         "aug_transform = 'custom'\n",
-        "similarity_function = 'cossim'\n",
+        "similarity_function = 'mixed'\n",
         "macro = 0.4\n",
         "enforce = 0.\n",
         "expand = 0.\n",
