--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -176,8 +176,7 @@
         "#@markdown For non-English languages use Google translation:\n",
         "translate = False #@param {type:\"boolean\"}\n",
         "\n",
-        "#@markdown Resume from the saved `.pt` snapshot, or from an image  \n",
-        "#@markdown (resolution settings below will be ignored in this case): \n",
+        "#@markdown Resume from an image (resolution settings below will be ignored in this case): \n",
         "\n",
         "if translate:\n",
         "  !pip3 install googletrans==3.1.0a0\n",
@@ -680,7 +679,7 @@
         "      loss = 0\n",
         "\n",
         "      noise = aug_noise * (torch.rand(1, 1, *params[0].shape[2:4], 1)-0.5).cuda() if aug_noise > 0 else 0.\n",
-        "      img_out = image_f(noise)\n",
+        "      img_out = image_f(noise, fixcontrast=resume)\n",
         "      img_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, macro)[0]\n",
         "      out_enc = model_clip.encode_image(img_sliced)\n",
         "\n",
@@ -696,7 +695,7 @@
         "        loss -= sharpness * derivat(img_out, mode='naive')\n",
         "        # loss -= sharpness * derivat(img_sliced, mode='scharr')\n",
         "      if enforce != 0:\n",
-        "        img_sliced = slice_imgs([image_f(noise)], samples, modsize, trform_f, align, macro)[0]\n",
+        "        img_sliced = slice_imgs([image_f(noise, fixcontrast=resume)], samples, modsize, trform_f, align, macro)[0]\n",
         "        out_enc2 = model_clip.encode_image(img_sliced)\n",
         "        loss -= enforce * sim_func(out_enc, out_enc2, similarity_function)\n",
         "        del out_enc2; torch.cuda.empty_cache()\n",
@@ -718,7 +717,7 @@
         "      opt_state = optimr.state_dict()\n",
         "\n",
         "    with torch.no_grad():\n",
-        "      img_t = image_f(contrast=contrast)[0].permute(1,2,0)\n",
+        "      img_t = image_f(contrast=contrast, fixcontrast=resume)[0].permute(1,2,0)\n",
         "      img_np = torch.clip(img_t*255, 0, 255).cpu().numpy().astype(np.uint8)\n",
         "    imageio.imsave(os.path.join(tempdir, '%05d.jpg' % glob_step), img_np, quality=95)\n",
         "    shutil.copy(os.path.join(tempdir, '%05d.jpg' % glob_step), 'result.jpg')\n",
