--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -318,7 +318,32 @@
         "\n",
         "%cd $work_dir\n",
         "clear_output()\n",
-        "print(' using CLIP model', model)"
+        "print(' using CLIP model', model)\n",
+        "\n",
+        "if method == 'RGB':\n",
+        "\n",
+        "  if resume:\n",
+        "    img_in = imageio.imread(resumed_bytes)\n",
+        "    # params_tmp = torch.Tensor(img_in).permute(2,0,1).unsqueeze(0).float().cuda()\n",
+        "    params_tmp = 3.3 * un_rgb(img_in, colors=2.)\n",
+        "    sideY, sideX = img_in.shape[0], img_in.shape[1]\n",
+        "  else:\n",
+        "    params_tmp = torch.randn(1, 3, sideY, sideX).cuda() # * 0.01\n",
+        "\n",
+        "else: # FFT\n",
+        "\n",
+        "  if resume:\n",
+        "    if os.path.splitext(resumed_filename)[1].lower()[1:] in ['jpg','png','tif','bmp']:\n",
+        "      img_in = imageio.imread(resumed_bytes)\n",
+        "      params_tmp = img2fft(img_in, 1.5, 1.) * 2.\n",
+        "    else:\n",
+        "      params_tmp = torch.load(io.BytesIO(resumed_bytes))\n",
+        "      if isinstance(params_tmp, list): params_tmp = params_tmp[0]\n",
+        "    params_tmp = params_tmp.cuda()\n",
+        "    sideY, sideX = params_tmp.shape[2], (params_tmp.shape[3]-1)*2\n",
+        "  else:\n",
+        "    params_shape = [1, 3, sideY, sideX//2+1, 2]\n",
+        "    params_tmp = torch.randn(*params_shape).cuda() * 0.01\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -439,8 +464,8 @@
         "# pretrained models: Nyu is much better but Kitti is an option too\n",
         "depth_model = 'nyu' # @ param [\"nyu\",\"kitti\"]\n",
         "DepthStrength = 0.01 #@param{type:\"number\"}\n",
-        "MaskBlurAmt = 33 #@param{type:\"integer\"}\n",
         "save_depth = False #@param{type:\"boolean\"}\n",
+        "MaskBlurAmt = 33 \n",
         "size = (sideY,sideX)\n",
         "\n",
         "#@markdown NB: depth computing may double rendering time. \n",
@@ -542,31 +567,6 @@
         "outpic = ipy.Output()\n",
         "outpic\n",
         "\n",
-        "if method == 'RGB':\n",
-        "\n",
-        "  if resume:\n",
-        "    img_in = imageio.imread(resumed_bytes) / 255.\n",
-        "    params_tmp = torch.Tensor(img_in).permute(2,0,1).unsqueeze(0).float().cuda()\n",
-        "    params_tmp = un_rgb(params_tmp, colors=1.)\n",
-        "    sideY, sideX = img_in.shape[0], img_in.shape[1]\n",
-        "  else:\n",
-        "    params_tmp = torch.randn(1, 3, sideY, sideX).cuda() # * 0.01\n",
-        "\n",
-        "else: # FFT\n",
-        "\n",
-        "  if resume:\n",
-        "    if os.path.splitext(resumed_filename)[1].lower()[1:] in ['jpg','png','tif','bmp']:\n",
-        "      img_in = imageio.imread(resumed_bytes)\n",
-        "      params_tmp = img2fft(img_in, 1.5, 1.) * 2.\n",
-        "    else:\n",
-        "      params_tmp = torch.load(io.BytesIO(resumed_bytes))\n",
-        "      if isinstance(params_tmp, list): params_tmp = params_tmp[0]\n",
-        "    params_tmp = params_tmp.cuda()\n",
-        "    sideY, sideX = params_tmp.shape[2], (params_tmp.shape[3]-1)*2\n",
-        "  else:\n",
-        "    params_shape = [1, 3, sideY, sideX//2+1, 2]\n",
-        "    params_tmp = torch.randn(*params_shape).cuda() * 0.01\n",
-        "  \n",
         "params_tmp = params_tmp.detach()\n",
         "\n",
         "# animation controls\n",
