aesthetic and dualmod

--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -37,8 +37,10 @@
         "* works with [inverse FFT](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) representation of the image or **directly with RGB** pixels (no GANs involved)\n",
         "* generates massive detailed textures (a la deepdream), **unlimited resolution**\n",
         "* optional **depth** processing for 3D look\n",
-        "* various CLIP models\n",
-        "* can start/resume from an image\n"
+        "* can start/resume from an image\n",
+        "* various CLIP models, dual mode\n",
+        "* employs [aesthetic loss](https://github.com/LAION-AI/aesthetic-predictor) \n",
+        "\n"
       ]
     },
     {
@@ -113,7 +115,7 @@
         "!pip install git+https://github.com/eps696/aphantasia\n",
         "from aphantasia.image import to_valid_rgb, fft_image, rfft2d_freqs, img2fft, pixel_image, un_rgb\n",
         "from aphantasia.utils import basename, file_list, img_list, img_read, txt_clean, plot_text, old_torch\n",
-        "from aphantasia.utils import slice_imgs, derivat, pad_up_to, slerp, checkout, sim_func, latent_anima\n",
+        "from aphantasia.utils import slice_imgs, derivat, pad_up_to, slerp, aesthetic_model, intrl, checkout, sim_func, latent_anima\n",
         "from aphantasia import transforms\n",
         "from aphantasia.progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
@@ -272,7 +274,8 @@
         "frame_step = 100 #@param {type:\"integer\"}\n",
         "#@markdown > Config\n",
         "method = 'RGB' #@param ['FFT', 'RGB']\n",
-        "model = 'ViT-B/32' #@param ['ViT-B/16', 'ViT-B/32', 'RN101', 'RN50x16', 'RN50x4', 'RN50']\n",
+        "model = 'dual' #@param ['dual', 'ViT-B/16', 'ViT-B/32', 'RN101', 'RN50x16', 'RN50x4', 'RN50']\n",
+        "aesthetic =  2#@param {type:\"number\"}\n",
         "\n",
         "# Default settings\n",
         "if method == 'RGB':\n",
@@ -309,6 +312,12 @@
         "DepthStrength = 0.\n",
         "save_depth = False\n",
         "\n",
+        "if model == 'dual':\n",
+        "  dualmod = 2\n",
+        "  model = 'ViT-B/32'\n",
+        "else:\n",
+        "  dualmod = None\n",
+        "\n",
         "print(' loading CLIP model..')\n",
         "model_clip, _ = clip.load(model, jit=old_torch())\n",
         "modsize = model_clip.visual.input_resolution\n",
@@ -316,9 +325,20 @@
         "if model in xmem.keys():\n",
         "  sample_decrease *= xmem[model]\n",
         "\n",
+        "if dualmod is not None: # second is vit-16\n",
+        "  model_clip2, _ = clip.load('ViT-B/16', jit=old_torch())\n",
+        "  sample_decrease *= 0.23\n",
+        "  dualmod_nums = list(range(steps))[dualmod::dualmod]\n",
+        "  print(' dual model every %d step' % dualmod)\n",
+        "\n",
+        "if aesthetic != 0 and model in ['ViT-B/32', 'ViT-B/16', 'ViT-L/14']:\n",
+        "  aest = aesthetic_model(model).cuda()\n",
+        "  if dualmod is not None:\n",
+        "    aest2 = aesthetic_model('ViT-B/16').cuda()\n",
+        "    \n",
         "%cd $work_dir\n",
         "clear_output()\n",
-        "print(' using CLIP model', model)\n",
+        "print(' using CLIP model', model if dualmod is None else 'dual')\n",
         "\n",
         "if method == 'RGB':\n",
         "\n",
@@ -356,7 +376,8 @@
       "source": [
         "**`FFT`** method uses inverse FFT representation of the image. It allows flexible motion, but is either blurry (if smoothed) or noisy (if not).  \n",
         "**`RGB`** method directly optimizes image pixels (without FFT parameterization). It's more clean and stable, when zooming in.  \n",
-        "There are few choices for CLIP `model` (results do vary!). I prefer ViT-B/32 for consistency, next best bet is ViT-B/16.  \n",
+        "There are few choices for CLIP `model` (results do vary!). Dual (ViT-B/32 + ViT-B/16) usually works best. Otherwise, I prefer ViT's for consistency.  \n",
+        "`aesthetic` enforces overall cuteness (try various values!). May be set negative.  \n",
         "\n",
         "**`steps`** defines the length of animation per text line (multiply it to the inputs line count to get total video duration in frames).  \n",
         "`frame_step` sets frequency of the changes in animation (how many frames between motion keypoints).  \n",
@@ -544,7 +565,7 @@
         "samples = int(samples * sample_decrease)\n",
         "print(' using %s method, %d samples, %s optimizer' % (method, samples, optimizer))\n",
         "\n",
-        "def enc_text(txt):\n",
+        "def enc_text(txt, model_clip=model_clip):\n",
         "  if translate:\n",
         "    txt = translator.translate(txt, dest='en').text\n",
         "  emb = model_clip.encode_text(clip.tokenize(txt).cuda()[:77])\n",
@@ -553,8 +574,12 @@
         "# Encode inputs\n",
         "count = 0 # max count of texts and styles\n",
         "key_txt_encs = [enc_text(txt) for txt in texts]\n",
+        "if dualmod is not None:\n",
+        "  key_txt_encs2 = [enc_text(txt, model_clip2) for txt in texts]\n",
         "count = max(count, len(key_txt_encs))\n",
         "key_styl_encs = [enc_text(style) for style in styles]\n",
+        "if dualmod is not None:\n",
+        "  key_styl_encs2 = [enc_text(style, model_clip2) for style in styles]\n",
         "count = max(count, len(key_styl_encs))\n",
         "assert count > 0, \"No inputs found!\"\n",
         "\n",
@@ -608,10 +633,21 @@
         "  if interpolate_topics:\n",
         "    txt_encs  = get_encs(key_txt_encs,  num)\n",
         "    styl_encs = get_encs(key_styl_encs, num)\n",
+        "    if dualmod is not None:\n",
+        "      txt_encs2  = get_encs(key_txt_encs2,  num)\n",
+        "      styl_encs2 = get_encs(key_styl_encs2, num)\n",
         "  else:\n",
         "    txt_encs  = [key_txt_encs[min(num,  len(key_txt_encs)-1)][0]]  * steps if len(key_txt_encs)  > 0 else []\n",
         "    styl_encs = [key_styl_encs[min(num, len(key_styl_encs)-1)][0]] * steps if len(key_styl_encs) > 0 else []\n",
+        "    if dualmod is not None:\n",
+        "      txt_encs2  = [key_txt_encs2[min(num,  len(key_txt_encs2)-1)][0]]  * steps if len(key_txt_encs2)  > 0 else []\n",
+        "      styl_encs2 = [key_styl_encs2[min(num, len(key_styl_encs2)-1)][0]] * steps if len(key_styl_encs2) > 0 else []\n",
         "\n",
+        "  if dualmod is not None:\n",
+        "    txt_encs  = intrl(txt_encs,  txt_encs2,  dualmod)\n",
+        "    styl_encs = intrl(styl_encs, styl_encs2, dualmod)\n",
+        "    del txt_encs2, styl_encs2\n",
+        "        \n",
         "  if len(texts)  > 0: print(' ref text: ',  texts[min(num, len(texts)-1)][:80])\n",
         "  if len(styles) > 0: print(' ref style: ', styles[min(num, len(styles)-1)][:80])\n",
         "\n",
@@ -622,6 +658,10 @@
         "    txt_enc  = txt_encs[ii % len(txt_encs)].unsqueeze(0)   if len(txt_encs)  > 0 else None\n",
         "    styl_enc = styl_encs[ii % len(styl_encs)].unsqueeze(0) if len(styl_encs) > 0 else None\n",
         "    \n",
+        "    model_clip_ = model_clip2 if dualmod is not None and ii in dualmod_nums else model_clip\n",
+        "    if aesthetic != 0:\n",
+        "      aest_ = aest2 if dualmod is not None and ii in dualmod_nums else aest\n",
+        "\n",
         "    ### animation: transform frame, reload params\n",
         "\n",
         "    h, w = sideY, sideX\n",
@@ -681,7 +721,10 @@
         "      noise = aug_noise * (torch.rand(1, 1, *params[0].shape[2:4], 1)-0.5).cuda() if aug_noise > 0 else 0.\n",
         "      img_out = image_f(noise, fixcontrast=resume)\n",
         "      img_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, macro)[0]\n",
-        "      out_enc = model_clip.encode_image(img_sliced)\n",
+        "      out_enc = model_clip_.encode_image(img_sliced)\n",
+        "\n",
+        "      if aesthetic != 0 and model in ['ViT-B/32', 'ViT-B/16', 'ViT-L/14'] and aest_ is not None:\n",
+        "        loss -= 0.001 * aesthetic * aest_(out_enc).mean()\n",
         "\n",
         "      if method == 'RGB': # empirical hack\n",
         "        loss += abs(img_out.mean((2,3)) - 0.45).mean() # fix brightness\n",
@@ -696,7 +739,7 @@
         "        # loss -= sharpness * derivat(img_sliced, mode='scharr')\n",
         "      if enforce != 0:\n",
         "        img_sliced = slice_imgs([image_f(noise, fixcontrast=resume)], samples, modsize, trform_f, align, macro)[0]\n",
-        "        out_enc2 = model_clip.encode_image(img_sliced)\n",
+        "        out_enc2 = model_clip_.encode_image(img_sliced)\n",
         "        loss -= enforce * sim_func(out_enc, out_enc2, similarity_function)\n",
         "        del out_enc2; torch.cuda.empty_cache()\n",
         "      if expand > 0:\n",
