--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -46,6 +46,7 @@
         "* directly parameterized with [FFT](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) [Fourier] or DWT [wavelets] (no pretrained GANs)\n",
         "* various CLIP models (including multi-language from [SBERT](https://sbert.net))\n",
         "* starting/resuming process from saved FFT parameters or from an image\n",
+        "* using [aesthetic loss](https://github.com/LAION-AI/aesthetic-predictor) \n",
         "* complex requests:\n",
         "  * image and/or text as main prompts  \n",
         "   (composition similarity controlled with [LPIPS](https://github.com/richzhang/PerceptualSimilarity) loss)\n",
@@ -122,7 +123,7 @@
         "%cd /content\n",
         "!pip install git+https://github.com/eps696/aphantasia\n",
         "from aphantasia.image import to_valid_rgb, fft_image, img2fft, dwt_image, img2dwt, init_dwt, dwt_scale\n",
-        "from aphantasia.utils import slice_imgs, derivat, pad_up_to, basename, img_list, img_read, plot_text, txt_clean, checkout, old_torch\n",
+        "from aphantasia.utils import slice_imgs, derivat, pad_up_to, aesthetic_model, basename, img_list, img_read, plot_text, txt_clean, checkout, old_torch\n",
         "from aphantasia import transforms\n",
         "from aphantasia.progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
@@ -218,8 +219,9 @@
         "id": "f3Sj0fxmtw6K"
       },
       "source": [
-        "Select visual `model` (results do vary!). I prefer ViT for consistency (and it's the only native multi-language option).  \n",
+        "If needed, select visual `model` (results do vary!). Dual (ViT-B/32 + ViT-B/16) usually works best. Otherwise, I prefer ViT for consistency (and it's the only native multi-language option).  \n",
         "`align` option is about composition. `uniform` looks most adequate, `overscan` can make semi-seamless tileable texture.  \n",
+        "`aesthetic` enforces overall cuteness (try various values!). May be set negative.  \n",
         "`use_wavelets` for DWT encoding instead of FFT. Select `wave` method if needed.  \n",
         "`aug_transform` applies some augmentations, inhibiting image fragmentation & \"graffiti\" printing (slower, yet recommended).  \n",
         "`sync` value adds LPIPS loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity.  \n",
@@ -245,8 +247,9 @@
         "sideX = 1280 #@param {type:\"integer\"}\n",
         "sideY = 720 #@param {type:\"integer\"}\n",
         "#@markdown > Config\n",
-        "model = 'ViT-B/32' #@param ['ViT-B/16', 'ViT-B/32', 'RN101', 'RN50x16', 'RN50x4', 'RN50']\n",
+        "model = 'dual' #@param ['dual', 'ViT-B/16', 'ViT-B/32', 'RN101', 'RN50x16', 'RN50x4', 'RN50']\n",
         "align = 'uniform' #@param ['central', 'uniform', 'overscan']\n",
+        "aesthetic =  1.#@param {type:\"number\"}\n",
         "use_wavelets = False #@param {type:\"boolean\"}\n",
         "wave = 'coif1' #@param ['db2', 'db3', 'db4', 'coif1', 'coif2', 'coif3', 'coif4']\n",
         "aug_transform = True #@param {type:\"boolean\"}\n",
@@ -270,7 +273,13 @@
         "progressive_grow = False #@param {type:\"boolean\"}\n",
         "if multilang: model = 'ViT-B/32' # sbert model is trained with ViT\n",
         "diverse = -enhance\n",
-        "expand = abs(enhance)\n"
+        "expand = abs(enhance)\n",
+        "\n",
+        "if model == 'dual':\n",
+        "  dualmod = 2\n",
+        "  model = 'ViT-B/32'\n",
+        "else:\n",
+        "  dualmod = None\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -359,7 +368,18 @@
         "if multilang is True:\n",
         "    model_lang = SentenceTransformer('clip-ViT-B-32-multilingual-v1').cuda()\n",
         "\n",
-        "def enc_text(txt):\n",
+        "if dualmod is not None: # second is vit-16\n",
+        "  model_clip2, _ = clip.load('ViT-B/16', jit=old_torch())\n",
+        "  samples = int(samples * 0.25)\n",
+        "  dualmod_nums = list(range(steps))[dualmod::dualmod]\n",
+        "  print(' dual model every %d step' % dualmod)\n",
+        "\n",
+        "if aesthetic != 0 and model in ['ViT-B/32', 'ViT-B/16', 'ViT-L/14']:\n",
+        "  aest = aesthetic_model(model).cuda()\n",
+        "  if dualmod is not None:\n",
+        "    aest2 = aesthetic_model('ViT-B/16').cuda()\n",
+        "\n",
+        "def enc_text(txt, model_clip=model_clip):\n",
         "  if multilang is True:\n",
         "    emb = model_lang.encode([txt], convert_to_tensor=True, show_progress_bar=False)\n",
         "  else:\n",
@@ -384,6 +404,8 @@
         "  img_in = torch.from_numpy(imageio.imread(in_img).astype(np.float32)/255.).unsqueeze(0).permute(0,3,1,2).cuda()[:,:3,:,:]\n",
         "  in_sliced = slice_imgs([img_in], samples, modsize, transforms.normalize(), align)[0]\n",
         "  img_enc = model_clip.encode_image(in_sliced).detach().clone()\n",
+        "  if dualmod is not None:\n",
+        "    img_enc2 = model_clip2.encode_image(in_sliced).detach().clone()\n",
         "  if sync > 0:\n",
         "    align = 'overscan'\n",
         "    sim_loss = lpips.LPIPS(net='vgg', verbose=False).cuda()\n",
@@ -400,23 +422,31 @@
         "    text = translator.translate(text, dest='en').text\n",
         "    print(' translated to:', text) \n",
         "  txt_enc = enc_text(text)\n",
+        "  if dualmod is not None:\n",
+        "    txt_enc2 = enc_text(text, model_clip2)\n",
         "  if no_text > 0:\n",
         "    txt_plot = torch.from_numpy(plot_text(text, modsize)/255.).unsqueeze(0).permute(0,3,1,2).cuda()\n",
         "    txt_plot_enc = model_clip.encode_image(txt_plot).detach().clone()\n",
+        "    if dualmod is not None:\n",
+        "      txt_plot_enc2 = model_clip2.encode_image(txt_plot).detach().clone()\n",
         "\n",
         "if len(style) > 0:\n",
         "  print(' style:', style)\n",
         "  if translate:\n",
         "    style = translator.translate(style, dest='en').text\n",
         "    print(' translated to:', style) \n",
-        "  txt_enc2 = enc_text(style)\n",
+        "  style_enc = enc_text(style)\n",
+        "  if dualmod is not None:\n",
+        "    style_enc2 = enc_text(style, model_clip2)\n",
         "\n",
         "if len(subtract) > 0:\n",
         "  print(' without:', subtract)\n",
         "  if translate:\n",
         "    subtract = translator.translate(subtract, dest='en').text\n",
         "    print(' translated to:', subtract) \n",
-        "  txt_enc0 = enc_text(subtract)\n",
+        "  not_enc = enc_text(subtract)\n",
+        "  if dualmod is not None:\n",
+        "    not_enc2 = enc_text(subtract, model_clip2)\n",
         "\n",
         "if multilang is True: del model_lang\n",
         "\n",
@@ -447,18 +477,33 @@
         "  noise = aug_noise * torch.randn(1, 1, *params[0].shape[2:4], 1).cuda() if aug_noise > 0 else None\n",
         "  img_out = image_f(noise)\n",
         "  img_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, macro=macro)[0]\n",
-        "  out_enc = model_clip.encode_image(img_sliced)\n",
         "\n",
         "  if len(text) > 0: # input text\n",
-        "    loss += sign * torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
-        "    if no_text > 0:\n",
-        "      loss -= sign * no_text * torch.cosine_similarity(txt_plot_enc, out_enc, dim=-1).mean()\n",
-        "  if len(style) > 0: # input text - style\n",
-        "    loss += sign * 0.5 * torch.cosine_similarity(txt_enc2, out_enc, dim=-1).mean()\n",
-        "  if len(subtract) > 0: # subtract text\n",
-        "    loss -= sign * torch.cosine_similarity(txt_enc0, out_enc, dim=-1).mean()\n",
+        "    txt_enc_    = txt_enc2      if dualmod is not None and i in dualmod_nums else txt_enc\n",
+        "  if len(style) > 0:\n",
+        "    style_enc_  = style_enc2    if dualmod is not None and i in dualmod_nums else style_enc\n",
         "  if upload_image:\n",
-        "    loss += sign * 0.5 * torch.cosine_similarity(img_enc, out_enc, dim=-1).mean()\n",
+        "    img_enc_    = img_enc2      if dualmod is not None and i in dualmod_nums else img_enc\n",
+        "  if len(subtract) > 0:\n",
+        "    not_enc_    = not_enc2      if dualmod is not None and i in dualmod_nums else not_enc\n",
+        "  if no_text > 0:\n",
+        "    txtpic_enc_ = txt_plot_enc2 if dualmod is not None and i in dualmod_nums else txt_plot_enc\n",
+        "  model_clip_   = model_clip2   if dualmod is not None and i in dualmod_nums else model_clip\n",
+        "  if aesthetic != 0:\n",
+        "    aest_       = aest2         if dualmod is not None and i in dualmod_nums else aest\n",
+        "\n",
+        "  out_enc = model_clip_.encode_image(img_sliced)\n",
+        "\n",
+        "  if len(text) > 0: # input text\n",
+        "    loss += sign * torch.cosine_similarity(txt_enc_, out_enc, dim=-1).mean()\n",
+        "    if no_text > 0:\n",
+        "      loss -= sign * no_text * torch.cosine_similarity(txtpic_enc_, out_enc, dim=-1).mean()\n",
+        "  if len(style) > 0: # input text - style\n",
+        "    loss += sign * 0.5 * torch.cosine_similarity(style_enc_, out_enc, dim=-1).mean()\n",
+        "  if len(subtract) > 0: # subtract text\n",
+        "    loss -= sign * torch.cosine_similarity(not_enc_, out_enc, dim=-1).mean()\n",
+        "  if upload_image:\n",
+        "    loss += sign * 0.5 * torch.cosine_similarity(img_enc_, out_enc, dim=-1).mean()\n",
         "  if sync > 0 and upload_image: # image composition sync\n",
         "    prog_sync = (steps - i) / steps \n",
         "    loss += prog_sync * sync * sim_loss(F.interpolate(img_out, sim_size).float(), img_in, normalize=True).squeeze()\n",
@@ -467,7 +512,7 @@
         "    # loss -= sharpness * derivat(img_sliced, mode='scharr')\n",
         "  if diverse != 0:\n",
         "    img_sliced = slice_imgs([image_f(noise)], samples, modsize, trform_f, align, macro=macro)[0]\n",
-        "    out_enc2 = model_clip.encode_image(img_sliced)\n",
+        "    out_enc2 = model_clip_.encode_image(img_sliced)\n",
         "    loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
         "    del out_enc2; torch.cuda.empty_cache()\n",
         "  if expand > 0:\n",
@@ -475,6 +520,8 @@
         "    if i > 0:\n",
         "      loss += expand * torch.cosine_similarity(out_enc, prev_enc, dim=-1).mean()\n",
         "    prev_enc = out_enc.detach()\n",
+        "  if aesthetic != 0 and aest_ is not None:\n",
+        "    loss -= 0.001 * aesthetic * aest_(out_enc).mean()\n",
         "  del img_out, img_sliced, out_enc; torch.cuda.empty_cache()\n",
         "\n",
         "  if progressive_grow is True:\n",
