postproc link in colabs

--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -555,6 +555,16 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Consider [post-processing by ESRGAN](https://colab.research.google.com/drive/1CKwPQacNjmNA_ydY6Be7xwFNJJWJCm_T) with [\"painting\" models](https://archive.org/details/hr-painting-upscaling) by Peter Baylies.  \n",
+        "`pre_downscale` option helps to clean up pixel noise from these methods.\n"
+      ],
+      "metadata": {
+        "id": "s1_ppReXVwmN"
+      }
     }
   ]
 }
