--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -791,6 +791,16 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Consider [post-processing by ESRGAN](https://colab.research.google.com/drive/1CKwPQacNjmNA_ydY6Be7xwFNJJWJCm_T) with [\"painting\" models](https://archive.org/details/hr-painting-upscaling) by Peter Baylies.  \n",
+        "`pre_downscale` option helps to clean up pixel noise from these methods."
+      ],
+      "metadata": {
+        "id": "KgXHJz1kXBbW"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "BsehQRircaw7"
       },
